Horizontal scroll fix

--- a/src/style.css
+++ b/src/style.css
@@ -6,13 +6,17 @@
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
   width: 100vw;
-  overflow: auto;
 }
 
 html, body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 @font-face {
